Fixes to view mode toggle element
- Replaced label with button
- Made invisible checkbox fill the whole button

--- a/app/assets/stylesheets/mixins/_form_2.scss
+++ b/app/assets/stylesheets/mixins/_form_2.scss
@@ -31,17 +31,24 @@
 }
 
 @mixin cc-toggle {
-  cursor: pointer;
+  background-color: transparent;
+  border: none;
   display: block;
   font-size: 16px;
   height: 36px;
   overflow: hidden;
+  padding: 0;
   position: relative;
   width: 85px;
 
   input {
+    cursor: pointer;
+    height: 100%;
+    left: 0;
     opacity: 0;
     position: absolute;
+    top: 0;
+    width: 100%;
     z-index: 5;
   }
 
